Fix align again

--- a/index.css
+++ b/index.css
@@ -14,6 +14,8 @@ body {
 .greetings {
     display: none;
     font-size: x-large;
+}
+.js-form input {
     text-align: center;
 }
 
